--- a/data/mad/advancements/treasure_hunt.json
+++ b/data/mad/advancements/treasure_hunt.json
@@ -1,5 +1,5 @@
 {
-    "parent": "mad:tsutenkaku",
+    "parent": "mad:root",
     "display": {
         "icon": {
             "item": "minecraft:golden_pickaxe",
