--- a/data/mad/advancements/disappear_darkness.json
+++ b/data/mad/advancements/disappear_darkness.json
@@ -10,7 +10,7 @@
         "description": {
             "text": "エンダーマンを倒す"
         },
-        "frame": "challenge",
+        "frame": "task",
         "show_toast": true,
         "announce_to_chat": true,
         "hidden": false
