--- a/data/mad/advancements/treasure_hunt.json
+++ b/data/mad/advancements/treasure_hunt.json
@@ -11,7 +11,7 @@
         "description": {
             "text": "エメラルド, ダイヤモンド, 金, 鉄, ラピスラズリ, レッドストーン, ネザークォーツ\n7種類のアイテムを全て手に入れる。"
         },
-        "frame": "challenge",
+        "frame": "task",
         "show_toast": true,
         "announce_to_chat": true,
         "hidden": false
