--- a/data/minecraft/advancements/adventure/walk_on_powder_snow_with_leather_boots.json
+++ b/data/minecraft/advancements/adventure/walk_on_powder_snow_with_leather_boots.json
@@ -1,5 +1,5 @@
 {
-  "parent": "minecraft:adventure/root",
+  "parent": "minecraft:adventure/sleep_in_bed",
   "display": {
     "icon": {
       "item": "minecraft:leather_boots",
@@ -49,8 +49,5 @@
     [
       "walk_on_powder_snow_with_leather_boots"
     ]
-  ],
-  "rewards": {
-    "function": "mad:system/ongame/advancements/adventure/walk_on_powder_snow_with_leather_boots"
-  }
+  ]
 }
