--- a/data/mad/advancements/potage00/disappear_darkness.json
+++ b/data/mad/advancements/potage00/disappear_darkness.json
@@ -1,40 +1,42 @@
 {
-    "parent": "mad:potage00/adventure",
-    "display": {
-        "icon": {
-            "item": "minecraft:ender_pearl"
-        },
-        "title": {
-            "text": "消える暗闇"
-        },
-        "description": {
-            "text": "エンダーマンを倒す"
-        },
-        "frame": "task",
-        "show_toast": true,
-        "announce_to_chat": true,
-        "hidden": false
+  "parent": "mad:potage00/adventure",
+  "display": {
+    "icon": {
+      "item": "minecraft:ender_pearl"
     },
-    "criteria": {
-        "disappear_darkness": {
-            "trigger": "minecraft:player_killed_entity",
-            "conditions": {
-                "entity": [
-                    {
-                        "condition": "minecraft:entity_properties",
-                        "predicate": {
-                            "type": "minecraft:enderman"
-                        },
-                        "entity": "this"
-                    }
-                ]
-            }
-        }
+    "title": {
+      "text": "消える暗闇"
     },
-    "requirements": [
-        ["disappear_darkness"]
-    ],
-    "rewards": {
-        "function": "mad:system/ongame/advancements/potage00/disappear_darkness"
+    "description": {
+      "text": "エンダーマンを倒す"
+    },
+    "frame": "task",
+    "show_toast": true,
+    "announce_to_chat": true,
+    "hidden": false
+  },
+  "criteria": {
+    "disappear_darkness": {
+      "trigger": "minecraft:player_killed_entity",
+      "conditions": {
+        "entity": [
+          {
+            "condition": "minecraft:entity_properties",
+            "predicate": {
+              "type": "minecraft:enderman"
+            },
+            "entity": "this"
+          }
+        ]
+      }
     }
+  },
+  "requirements": [
+    [
+      "disappear_darkness"
+    ]
+  ],
+  "rewards": {
+    "function": "mad:system/ongame/advancements/potage00/disappear_darkness"
+  }
 }
