--- a/data/mad/advancements/potage00/treasure_hunt.json
+++ b/data/mad/advancements/potage00/treasure_hunt.json
@@ -1,123 +1,146 @@
 {
-    "parent": "mad:potage00/collect",
-    "display": {
-        "icon": {
-            "item": "minecraft:golden_pickaxe",
-            "nbt": "{Damage:0}"
-        },
-        "title": {
-            "text": "宝探し"
-        },
-        "description": {
-            "text": "エメラルド, ダイヤモンド, 金, 鉄, 銅, ラピスラズリ, レッドストーン, ネザークォーツ\n8種類のアイテムを全て手に入れる。"
-        },
-        "frame": "task",
-        "show_toast": true,
-        "announce_to_chat": true,
-        "hidden": false
+  "parent": "mad:potage00/collect",
+  "display": {
+    "icon": {
+      "item": "minecraft:golden_pickaxe",
+      "nbt": "{Damage:0}"
     },
-    "criteria": {
-        "emerald": {
-            "trigger": "minecraft:inventory_changed",
-            "conditions": {
-                "items": [
-                    {
-                        "items": [
-                            "minecraft:emerald"
-                        ]
-                    }
-                ]
-            }
-        },
-        "diamond": {
-            "trigger": "minecraft:inventory_changed",
-            "conditions": {
-                "items": [
-                    {
-                        "items": [
-                            "minecraft:diamond"
-                        ]
-                    }
-                ]
-            }
-        },
-        "gold_ingot": {
-            "trigger": "minecraft:inventory_changed",
-            "conditions": {
-                "items": [
-                    {
-                        "items": [
-                            "minecraft:gold_ingot"
-                        ]
-                    }
-                ]
-            }
-        },
-        "iron_ingot": {
-            "trigger": "minecraft:inventory_changed",
-            "conditions": {
-                "items": [
-                    {
-                        "items": [
-                            "minecraft:iron_ingot"
-                        ]
-                    }
-                ]
-            }
-        },
-        "copper_ingot": {
-            "trigger": "minecraft:inventory_changed",
-            "conditions": {
-                "items": [
-                    {
-                        "items": [
-                            "minecraft:copper_ingot"
-                        ]
-                    }
-                ]
-            }
-        },
-        "lapis_lazuli": {
-            "trigger": "minecraft:inventory_changed",
-            "conditions": {
-                "items": [
-                    {
-                        "items": [
-                            "minecraft:lapis_lazuli"
-                        ]
-                    }
-                ]
-            }
-        },
-        "redstone": {
-            "trigger": "minecraft:inventory_changed",
-            "conditions": {
-                "items": [
-                    {
-                        "items": [
-                            "minecraft:redstone"
-                        ]
-                    }
-                ]
-            }
-        },
-        "quartz": {
-            "trigger": "minecraft:inventory_changed",
-            "conditions": {
-                "items": [
-                    {
-                        "items": [
-                            "minecraft:quartz"
-                        ]
-                    }
-                ]
-            }
-        }
+    "title": {
+      "text": "宝探し"
     },
-    "requirements": [
-        ["emerald"], ["diamond"], ["gold_ingot"], ["iron_ingot"], ["copper_ingot"], ["lapis_lazuli"], ["redstone"], ["quartz"]
-    ],
-    "rewards": {
-        "function": "mad:system/ongame/advancements/potage00/treasure_hunt"
+    "description": {
+      "text": "エメラルド, ダイヤモンド, 金, 鉄, 銅, ラピスラズリ, レッドストーン, ネザークォーツ\n8種類のアイテムを全て手に入れる。"
+    },
+    "frame": "task",
+    "show_toast": true,
+    "announce_to_chat": true,
+    "hidden": false
+  },
+  "criteria": {
+    "emerald": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "minecraft:emerald"
+            ]
+          }
+        ]
+      }
+    },
+    "diamond": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "minecraft:diamond"
+            ]
+          }
+        ]
+      }
+    },
+    "gold_ingot": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "minecraft:gold_ingot"
+            ]
+          }
+        ]
+      }
+    },
+    "iron_ingot": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "minecraft:iron_ingot"
+            ]
+          }
+        ]
+      }
+    },
+    "copper_ingot": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "minecraft:copper_ingot"
+            ]
+          }
+        ]
+      }
+    },
+    "lapis_lazuli": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "minecraft:lapis_lazuli"
+            ]
+          }
+        ]
+      }
+    },
+    "redstone": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "minecraft:redstone"
+            ]
+          }
+        ]
+      }
+    },
+    "quartz": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "items": [
+              "minecraft:quartz"
+            ]
+          }
+        ]
+      }
     }
+  },
+  "requirements": [
+    [
+      "emerald"
+    ],
+    [
+      "diamond"
+    ],
+    [
+      "gold_ingot"
+    ],
+    [
+      "iron_ingot"
+    ],
+    [
+      "copper_ingot"
+    ],
+    [
+      "lapis_lazuli"
+    ],
+    [
+      "redstone"
+    ],
+    [
+      "quartz"
+    ]
+  ],
+  "rewards": {
+    "function": "mad:system/ongame/advancements/potage00/treasure_hunt"
+  }
 }
