--- a/data/mad/advancements/originals/obtain_treasures.json
+++ b/data/mad/advancements/originals/obtain_treasures.json
@@ -6,10 +6,10 @@
       "nbt": "{Damage:0}"
     },
     "title": {
-      "text": "宝探し"
+      "translate": "宝探し"
     },
     "description": {
-      "text": "エメラルド, ダイヤモンド, 金, 鉄, 銅, ラピスラズリ, レッドストーン, ネザークォーツ 8種類のアイテムを全て手に入れる"
+      "translate": "エメラルド, ダイヤモンド, 金, 鉄, 銅, ラピスラズリ, レッドストーン, ネザークォーツ 8種類のアイテムを全て手に入れる"
     },
     "frame": "task",
     "show_toast": true,
