--- a/data/mad/predicates/system/item/maze_maker/answer/east.json
+++ b/data/mad/predicates/system/item/maze_maker/answer/east.json
@@ -2,7 +2,7 @@
   "condition": "minecraft:entity_scores",
   "entity": "this",
   "scores": {
-    "RandomAngle": {
+    "RandomAnswer": {
       "min": 2,
       "max": 2
     }
